# eterry_navigation_custom_plugins

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/: coverage_path_trimmer copy.cpp  coverage_path_trimmer.cpp  go_to_loading_station copy.cpp  go_to_loading_station.cpp  is_first_run_condition.cpp  obstacle_condition.cpp  pause_condition.cpp  simple_path_generator copy.cpp  simple_path_generator.cpp  unloading_button_trigger.cpp  unloading_condition.cpp  wait_for_button_release.cpp
